<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_xetainang" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_soPhieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSoPhieu" />

        <TextView
            android:id="@+id/tv_ngayTao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNgayTao" />

        <TextView
            android:id="@+id/tv_ngayXuatPhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNgayXuatPhat" />

        <TextView
            android:id="@+id/tv_tuyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTuyen" />

        <TextView
            android:id="@+id/tv_xe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvXe" />
    </LinearLayout>
</LinearLayout>